--- a/peer-assesment-tool/resources/css/app.css
+++ b/peer-assesment-tool/resources/css/app.css
@@ -1,2 +1,4 @@
 @import url(../../node_modules/bootstrap/dist/css/bootstrap-grid.rtl.min.css);
 @import url(styles.css);
+@import url(kanban.css);
+
