--- a/peer-assesment-tool/resources/css/app.css
+++ b/peer-assesment-tool/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url(../../node_modules/bootstrap/dist/css/bootstrap-grid.rtl.min.css);
 @import url(styles.css);
 @import url(kanban.css);
+@import url(peer_evaluatie_student.css);
 
