--- a/pat/resources/css/student-beheer.css
+++ b/pat/resources/css/student-beheer.css
@@ -21,7 +21,8 @@
     }
 
     /* Header (dashboard style) */
-    .header {
+    .header,
+    header {
       width: 100%;
       min-height: 100px;
       background: linear-gradient(90deg, #00b09b, #96c93d);
@@ -39,7 +40,8 @@
       user-select: none;
     }
 
-    .header h1 {
+    .header h1
+    ,header h1 {
       margin: 0;
       font-size: 2rem;
       font-weight: 400;
